// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiHandler handleEvent lataaProjekti should load a new project from Velho 1`] = `
Object {
  "__typename": "Projekti",
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "esitetaanKuulutuksessa": true,
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "rooli": "OMISTAJA",
    },
  ],
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "status": "EI_JULKAISTU",
  "tyyppi": "TIE",
  "velho": Object {
    "nimi": "Testiprojekti 1",
  },
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 1`] = `
Array [
  "Initial state with projektipaallikko and omistaja",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "esitetaanKuulutuksessa": true,
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "rooli": "OMISTAJA",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 2`] = `
Array [
  "Create projekti having having both projektipaallikko and omistaja",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "rooli": "OMISTAJA",
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "nimi": "Testiprojekti 1",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 3`] = `
Array [
  "Loaded projekti having having both projektipaallikko and omistaja",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "puhelinnumero": "22",
      "rooli": "OMISTAJA",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 4`] = `
Array [
  "Save projekti having having only projektipaallikko",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
    ],
    "oid": "1",
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 5`] = `
Array [
  "Loaded projekti having having only projektipaallikko",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "rooli": "PROJEKTIPAALLIKKO",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 6`] = `
Array [
  "Save projekti having while adding omistaja back. There should be projektipaallikko and omistaja in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
    ],
    "oid": "1",
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 7`] = `
Array [
  "Loaded projekti having while adding omistaja back. There should be projektipaallikko and omistaja in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "puhelinnumero": "123456789",
      "rooli": "OMISTAJA",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 8`] = `
Array [
  "Save projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "rooli": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "rooli": "OMISTAJA",
      },
    ],
    "oid": "1",
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 9`] = `
Array [
  "Loaded projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "rooli": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "puhelinnumero": "123456789",
      "rooli": "OMISTAJA",
    },
  ],
]
`;
